some changes in resume

--- a/ExtraArticle/Resume.html
+++ b/ExtraArticle/Resume.html
@@ -1,14 +1,55 @@
-<h3> B. ARJUNKUMAR </h3>
-<p>
-arjunbalu.1998@outlook.com <br>
-+91 8608973591 <br>
-Plot No 13,Dhroupathy,New Perungalathur <br>
-Chennai-600063 <br>
-</p>
+<html>
+	<style>
+.box{
+	display:flex;
+
+}
+.header1{
+	text-align:front;
+	width:50%;
+
+}
+.header2{
+	text-align:center;
+        width:50%;
+
+
+}
+	</style>
+<body>
+	<div class="box">
+		<div class="header1">
+			<h3> B. ARJUNKUMAR </h3>
+			<p>
+			arjunbalu.1998@outlook.com <br>
+			+91 8608973591 <br>
+			Plot No 13,Dhroupathy,New Perungalathur,Chennai-600063 <br>
+			</p>
+		</div>
+		<div class="header2">
+			<h3>
+			<img src="arjun.jpeg" width="100" height="100">
+			</img>
+			</h3>
+		</div>
+	</div>
+
+<hr></hr>
+</p> 
+
 <h3> Career Objective </h3>
 <p> To learn the technology in the field of my work and to perform the duty required for the development of the organization I srve. </p>
+
+<html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
 <h3> Education Qualification </h3> 
-<table style="width 70">
+<table style="width :70px">
 <tr>
         <th> PARTICULARS </th>
         <th> COLLEGE/UNIVERSITY </th>
@@ -34,6 +75,10 @@ Chennai-600063 <br>
         <td> 85 </td>
 </tr>
 </table>
+</body>
+</html>
+
+
 <h3> Area of My Interest </h3>
 <p> <ul>
 	<li>AUTOCAD</li>
@@ -94,6 +139,8 @@ Languages Known: Tamil & English <br> </p>
  Date: 24 Aug 2021 </p>
 
 
+</body>
+</html>
 
 
 
