some changes in html and css file

--- a/Project/ab.html
+++ b/Project/ab.html
@@ -4,7 +4,7 @@
 <html>
 <head>
         <title> Accepted Bills </title>
-        <link rel="stylesheet" type="text/css" href="./ab.css">
+        <link rel="stylesheet" type="text/css" href="ab.css">
 
 </head>
 <body> 
