--- a/Project/bill.html
+++ b/Project/bill.html
@@ -3,14 +3,14 @@
 <html>
 <head>
 	<title> Bill Details </title>
-	<link rel="stylesheet" type="text/css" href="./bill.css">
+	<link rel="stylesheet" type="text/css" href="bill.css">
 
 </head>
 <body>
 
 	<div class="box">
 		<div class="box1">
-			<center> <img src= "./profile.jpeg" class="avatar" /> </center>
+			<center> <img src= "profile.jpeg" class="avatar"> </center>
 			<h1> Admin /<a href="profile.html"> <button type="button">Profile</button> </a> </h1> <br>
 			<hr> </hr>
 			
@@ -36,8 +36,10 @@
 			
 			<div class="top"> <br>
 				<h1> REIMBURSE</h1>
-				<div class="log"> 
+				<div class="log">
+					<a href="login.html">
 					<button class="button4" type="submit">Log-out</button>
+					</a>
 
 				</div>
 			</div> 
