--- a/Project/fp.html
+++ b/Project/fp.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Forgot password page </title>
-                <link rel="stylesheet" type="text/css" href="./fp.css">
+		<title> Forgot password </title>
+                <link rel="stylesheet" type="text/css" href="fp.css">
         </head>
 	<body>
 		<section class="f-p">
-			<form action="#" method="post">
+			<form>
 				<fieldset>
 					<legend>Forgot Your Password ?</legend>
 				
-					<center>  <img src= "./logo.png"> </center>
+					<center>  <img src= "logo.png"> </center>
 					
 					<p> E-Mail ID: </p>
 					<input type="text" name="E-Mail ID" id="E-Mail ID" placeholder="Enter a valid E-Mail ID"> <br><br>
