--- a/Project/login.html
+++ b/Project/login.html
@@ -16,7 +16,7 @@
                                           <p> Password </p>
                                           <input type="password" name="password" placeholder="Password">
                                           <center>
-                                          <button type="submit">Login</button>
+					  <a href="bill.html"> <button type="button">Login</button> </a>
                                           </center>
                                           <center>
                                           <a href="fp.html">Forget Password?</a>
