--- a/Project/profile.html
+++ b/Project/profile.html
@@ -4,15 +4,14 @@
 <html>
 <head>
         <title> Profile </title>
-        <link rel="stylesheet" type="text/css" href="./profile.css">
+        <link rel="stylesheet" type="text/css" href="profile.css">
 
 </head>
 <body>
 	
 	
 	<center> <h1 class="profile"> Profile</h1> 
-
-	<img src= "./profile.jpeg" class= "avatar" /> </center>
+	<img src= "profile.jpeg" class= "avatar"> </center>
 
 
 	<p> Name: Anoop N <br><br>
