--- a/Project/rb.html
+++ b/Project/rb.html
@@ -4,7 +4,7 @@
 <html>
 <head>
         <title> Rejected Bills </title>
-        <link rel="stylesheet" type="text/css" href="./rb.css">
+        <link rel="stylesheet" type="text/css" href="rb.css">
 
 </head>
 <body> 
